--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -65,6 +65,7 @@
 
   /* Line heights */
   --line-height-single: 1;
+  --line-height-display: 1.1;
   --line-height-tight: 1.3;
   --line-height-snug: 1.4;
   --line-height-body: 1.5;
